# rustlens

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
pkg/: Makefile  PKGBUILD  rustlens.desktop
src/: config.rs  functions.rs  items.rs  main.rs  templates.rs  theme.rs  watcher_utils.rs
src/get_details/: get_cluster_rb_details.rs  get_cluster_role_details.rs  get_configmap_details.rs  get_cr_details.rs  get_cr_instances.rs  get_crd_details copy.rs  get_crd_details.rs  get_cronjob_details.rs  get_daemonset_details.rs  get_deployment_details.rs  get_endpoint_details.rs  get_ingress_details.rs  get_job_details.rs  get_k8s_released_version.rs  get_leases_details.rs  get_node_details.rs  get_pod_details.rs  get_pv_details.rs  get_pvc_details.rs  get_rb_details.rs  get_replicaset_details.rs  get_role_details.rs  get_sc_details.rs  get_secret_details.rs  get_service_account_details.rs  get_service_details.rs  get_statefulset_details.rs  mod.rs
src/ui/: about.rs  ai_consultant.rs  cluster_rb_details.rs  cluster_role_details.rs  configmap_details.rs  configuration.rs  confirmation_dialog.rs  cr_details_parser.rs  crd_details copy.rs  crd_details.rs  cronjob_details.rs  daemonset_details.rs  decoder.rs  deployment_details.rs  endpoint_details.rs  ingress_details.rs  ip_calculator.rs  job_details.rs  jwt_decoder.rs  kubectl_proxy.rs  lease_details.rs  log_parser.rs  logs.rs  mod.rs  new_resource.rs  node_details.rs  other.rs  overview.rs  pod_details.rs  pv_details.rs  pvc_details.rs  rb_details.rs  replicaset_details.rs  res_conventer.rs  res_converter.rs  role_details.rs  sc_details.rs  scale.rs  secret_details.rs  service_account_details.rs  (+6 more)
src/watchers/: app_log_viewer.rs  cluster_rb.rs  cluster_role.rs  configmap.rs  crd copy.rs  crd.rs  cronjob.rs  csi_driver.rs  daemonset.rs  deployment.rs  endpoint.rs  event.rs  ingress.rs  job.rs  lease.rs  mod.rs  namespace.rs  network_policy.rs  node.rs  pdb.rs  pod.rs  pv.rs  pvc.rs  replicaset.rs  role.rs  role_binding.rs  secret.rs  service.rs  service_account.rs  statefulset.rs  storage_class.rs
