[package]
name = "rustlens"
version = "0.2.8"
edition = "2024"
authors = ["Denis Salmanovich"]
readme = "README.md"
description = "Free and open-source user interface designed for managing Kubernetes clusters"
repository = "https://github.com/denix666/rustlens"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
kube = { version = "2.0.1", features = ["runtime", "derive", "client", "config", "ws"] }
k8s-openapi = { version = "0.26", features = ["latest"] }
kube-discovery = "0.4.2"
futures = "0.3"
eframe = "0.32"
futures-util = "0.3"
image = "0.25.8"
serde_json = "1.0"
anyhow = "1.0"
home = "0.5.11"
chrono = "0.4"
serde_yaml = "0.9"
serde = "1.0"
regex = "1.11.2"
egui = "0.32"
http = "1.3.1"
rfd = "0.15.4"
indexmap = "2.11"
base64 = "0.22.1"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
toml = "0.9"
