[package]
name = "rustlens"
version = "0.4.0"
edition = "2024"
authors = ["Denis Salmanovich"]
readme = "README.md"
description = "Free and open-source user interface designed for managing Kubernetes clusters"
repository = "https://github.com/denix666/rustlens"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
kube = { version = "2.0.1", features = ["runtime", "derive", "client", "config", "ws"] }
k8s-openapi = { version = "0.26", features = ["latest"] }
kube-discovery = "0.4.2"
futures = "0.3"
eframe = "0.33"
futures-util = "0.3"
image = "0.25"
serde_json = "1.0"
anyhow = "1.0"
home = "0.5"
chrono = "0.4"
serde_yaml = "0.9"
serde = "1.0"
regex = "1.12"
egui = "0.33"
http = "1.3.1"
rfd = "0.15.4"
indexmap = "2.12"
base64 = "0.22.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
toml = "0.9"
walkdir = "2"
ipnetwork = "0.21"
uuid = { version = "1", features = ["v4", "fast-rng"] }
hmac = "0.12"
sha2 = "0.10"
log = "0.4"
flexi_logger = "0.31"
aws-config = { version = "1", default-features = false, features = ["rt-tokio", "sso"] }
aws-sdk-bedrockruntime = { version = "1.113", default-features = false, features = [ "rustls", "rt-tokio" ] }
aws-smithy-runtime-api = "1"
aws-smithy-types = { version = "1.3.4", features = ["serde-serialize", "serde-deserialize"] }
shell-words = "1"
